margin fix on mobile view

--- a/style/_desktopAboutMeBody.scss
+++ b/style/_desktopAboutMeBody.scss
@@ -2,11 +2,13 @@
 
 @media (max-width: 480px) {
   .AboutMeDesktopView {
+    overflow-x: hidden !important;
     // display: none;
     .intro {
       .introText {
         height: max-content !important;
-        font-size: 2.1rem !important;
+        font-size: 2.1\rem !important;
+        margin-right: .2rem !important;
       }
       .introImageHolder {
         margin-top: 3rem !important;
@@ -50,7 +52,7 @@ body {
       .introText {
         z-index: 5;
         width: 45rem;
-        height: 37rem;
+        height: max-content;
         text-align: justify;
         margin-bottom: 2vw;
         line-height: 1.5;
